# chimera-daemon

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MERGE_PROPOSAL.md  QUICKSTART.md  README.md  chimera.ps1  pyproject.toml
.github/workflows/: ci.yml
deploy/: chimera.service  install.sh
docs/: MULTIMEDIA_PIPELINE.md  shell-sync-integration.md
scripts/: chimera-wsl.bat  wsl-setup.sh
src/chimera/: __init__.py  _bootstrap.py  cli.py  config.py  daemon.py  queue.py  shell.py  startup.py  telemetry.py  watcher.py
src/chimera/ai/: __init__.py  vision.py
src/chimera/api/: __init__.py  server.py
src/chimera/api/routes/: control.py  graph.py  query.py
src/chimera/correlation/: __init__.py  discovery.py  engine.py  entities.py  patterns.py
src/chimera/extractors/: __init__.py  audio.py  base.py  chunker.py  code.py  document.py  embeddings.py  entities.py  fae.py  image.py  pipeline.py  registry.py
src/chimera/gpu/: __init__.py  correlation.py  setup.py  vectors.py
src/chimera/integration/: __init__.py  claude.py  mcp.py
src/chimera/storage/: __init__.py  catalog.py  vectors.py
src/chimera/sync/: __init__.py  cli.py  discovery.py  merger.py
src/chimera/usb/: __init__.py  build.py  excavator.py  launcher.py  sync.py  telemetry.py  telemetry_advanced.py
src/chimera/utils/: __init__.py  hashing.py  logging.py
tests/: conftest.py  test_cli.py  test_config.py  test_extractors.py  test_fae.py  test_integration.py  test_multimedia.py  test_queue.py  test_storage.py  test_watcher.py
tests/test_extractors/: test_code.py  test_document.py  test_fae.py
usb-package/: .chimera-usb  README.md  launch.bat  launch.sh
